<resources>
    <string name="app_name">E R-PAY</string>
    <string name="splash">splash</string>
    <string name="paymet_made_easier">Paymet Made Easier</string>
    <string name="electronic_rent_payment">Electronic Rent Payment</string>
    <string name="icon">icon</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="e_r_pay_tenant">E R-PAY Tenant</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account">Do Not Have An Account ?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="y">y</string>
    <string name="e_r_pay_home">E R-PAY HOME</string>
    <string name="settings">Settings</string>
    <string name="make_payment">Make Payment</string>
    <string name="make_request">Make Request</string>
    <string name="ab">ab</string>
    <string name="w">w</string>
    <string name="payments">Payments</string>
    <string name="do_you_want_to_pay_kes_5000_to_lavish_e_r_pay_account_no_01108345672">Do you want to pay Kes 5,000 to LAVISH E-R PAY Account No. 01108345672 ?</string>
    <string name="enter_m_pesa_pin">Enter M-PESA PIN</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="alphabets_4">Alphabets 4</string>
    <string name="requests">Requests</string>
    <string name="hello">Hello!!!</string>
    <string name="your_message">Your Message</string>
    <string name="about">About</string>
    <string name="electronic_rent_payment_system_is_meabt_to_make_rent_payment_much_easier_for_tenants_in_a_certain_palce">Electronic rent payment system is meabt to make rent payment much easier for tenants in a certain palce</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="information">Information</string>
    <string name="name">Name</string>
    <string name="lavish_house_appartments">Lavish House Appartments</string>
    <string name="_2547111997">+2547111997</string>
    <string name="bank">Bank</string>
    <string name="cooperative_bank">Cooperative Bank</string>
    <string name="account_no">Account No:</string>
    <string name="_01108586537">01108586537</string>
    <string name="notifications">Notifications</string>
    <string name="hello_william_kindly_confirm_that_you_service_request_has_been_attended_to_by_the_technitian_we_sent_o_date_28_04_2022_at_2_00pm_from_kilimani_service_experts">Hello William , kindly confirm that you service request has been attended to by the technician we sent o date 28/04/2022 at 2:00pm from KILIMANI SERVICE EXPERTS.</string>
    <string name="olbxfxueeytp_confirmed_you_have_paid_ksh_5000_to_lavish_appartments_via_e_r_pay_on_05_01_22_at_3_45pm_new_mpesa_balance_is_ksh_6_300_you_can_now_acees_mpesa_via_334_to_reverse_forward_this_message_to_456">OLBXFXUEEYTP Confirmed.You have paid Ksh 5,000 to LAVISH APARTMENTS via E R-PAY on 05/01/22 at 3:45pm. New MPESA Balance is Ksh 6,300. You can now acees MPESA via *334#. To reverse, forward this message to 456.</string>
    <string name="olbxmoerwerwq_confirmed_you_have_paid_ksh_5000_to_lavish_appartments_via_e_r_pay_on_05_03_22_at_3_45pm_new_mpesa_balance_is_ksh_7_300_you_can_now_acees_mpesa_via_334_to_reverse_forward_this_message_to_456">OLBXMOERWERWQ Confirmed.You have paid Ksh 5,000 to LAVISH APARTMENTS via E R-PAY on 05/03/22 at 3:45pm. New MPESA Balance is Ksh 7,300. You can now acees MPESA via *334#. To reverse, forward this message to 456.</string>
    <string name="olbxfxuerwq_confirmed_you_have_paid_ksh_5000_to_lavish_appartments_via_e_r_pay_on_23_02_22_at_3_45pm_new_mpesa_balance_is_ksh_15_300_you_can_now_acees_mpesa_via_334_to_reverse_forward_this_message_to_456">OLBXFXUERWQ Confirmed.You have paid Ksh 5,000 to LAVISH APARTMENTS via E R-PAY on 23/02/22 at 3:45pm. New MPESA Balance is Ksh 15,300. You can now acees MPESA via *334#. To reverse, forward this message to 456.</string>
    <string name="p">p</string>
    <string name="profile">Profile</string>
    <string name="change">Change</string>
    <string name="house_no">House No</string>
    <string name="_1">1</string>
</resources>