<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.Pay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#B1E8EF"
                app:cardCornerRadius="200dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/payments"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />



            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/do_you_want_to_pay_kes_5000_to_lavish_e_r_pay_account_no_01108345672"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/enter_m_pesa_pin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="numberPassword"
        android:hint="@string/alphabets_4"
        android:textColor="@color/black"
        android:maxLength="4"
        android:layout_marginHorizontal="30dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btncancel"
            android:layout_marginStart="70dp"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:backgroundTint="#E2CAC2C2"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btnsend"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="#E2CAC2C2"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>